	configure.in docs/doc2texi.el src/eval.c src/eval.h src/makefile.all
	src/makefile.awc src/plot.c src/syscfg.h src/term.c src/term.h
	term/apollo.trm term/gpr.trm:

	Remove code specific to support of Apollo workstations.
	The final gnuplot version in the apollo archives was gnuplot 2.0 (1996).
	15 files changed, 16 insertions(+), 1211 deletions(-)

2010-03-13  Ethan A Merritt  <merritt@u.washington.edu

 	* config/makefile.286 config/makefile.msc config/makefile.msw
	config/makefile.tc config/makefile.wc config/makefile.unx
	src/Makefile.am src/alloc.c src/alloc.h src/eval.c src/gnuplot.def
	src/graph3d.c src/help.c src/hidden3d.h src/misc.c src/plot.c
	src/plot2d.c src/set.c src/show.c src/syscfg.h src/term.c
	src/term_api.h src/unset.c src/util3d.c term/cgm.trm:

	We have not supported 16-bit DOS or WIN since version 4.0.
	Remove the old cruft that was wrapped in conditional flags
	DOS16 WIN16 DOSX286 LITE
	23 files changed, 11 insertions(+), 324 deletions(-)

2010-03-13  Ethan A Merritt  <merritt@u.washington.edu>

	* src/util.c (getusername): Fix segfault if neither USER or USERNAME
	are present in the environment.

2010-03-09  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c (preset): Fix compilation error if XAPPLRESDIR is not
	externally defined.

2010-03-08  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/README docs/Makefile.in docs/pdffigures.tex docs/titlepag.tex:
	Split out dependence on the packages graphicx and picins into a separate
	file (pdffigures.tex) that is only needed by target "make pdffigures".

2010-03-07  Ethan A Merritt  <merritt@u.washington.edu>

	* share/Makefile.am: Give up on figuring out a universally agreed on
	place where x11 app-defaults files should be installed.  Place ours in
	${PREFIX}/share/gnuplot/4.5/app-defaults

2010-03-06  Tatsuro Matsuoka  <tmacchant3@yahoo.co.jp>

	* INSTALL config/makefile.mgw config/makefile.cyg:
	Consolidate the instructions for building using mgw and cygwin into